# ZKU-March2022

./: README.md
assignment1/circom-intro/: cleanup.sh  merkleroot.circom  run.sh
assignment1/solidity-nft-merkle-tree/: Learner.sol
assignment2/q3/: custom.test.js
assignment3/q1/: Jump.sol  cleanup.sh  input.json  jump.circom  run.sh
assignment3/q2/: CardGame.sol  input.json  samesuite.circom
assignment4/q2/: RollupNCExplained.sol
assignment4/q3/: RollupProofExplanation.ts
assignment4/q3/zku-snapp/: README.md  package-lock.json  package.json
assignment4/q3/zku-snapp/src/: index.test.ts  index.ts
assignment5/q2/: Loan.sol  LoanDapp.sol
assignment5/q3/: Cargo.toml  Jump.sol  README.md  contract_abi.json
assignment5/q3/src/: main.rs
assignment6/q3/: EthereumLightClient.sol  HarmonyLightClient.sol  PseudoHarmonyLightClient.sol  TokenLockerOnEthereum.sol  TokenLockerOnHarmony.sol  bridge.hmy.js
assignment6/q4/: NearBridge.sol
background-assignment/: Ballot.sol  Hello-World.sol
